<resources>
    <string name="app_name">Biblioteca de Videojuegos</string>

    <string name="titulo_biblioteca">Mi biblioteca</string>
    <string name="titulo_anadir">Añadir videojuego</string>

    <string name="texto_nombre">Nombre</string>
    <string name="texto_plataforma">Plataforma</string>
    <string name="texto_genero">Género</string>
    <string name="texto_estado">Estado</string>
    <string name="texto_valoracion">Valoración</string>

    <string name="boton_guardar">Guardar</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="boton_anadir">Añadir videojuego</string>

    <string name="estado_jugado">Jugado</string>
    <string name="estado_pendiente">Pendiente</string>
    <string name="mensaje_bienvenida">Bienvenido a tu biblioteca de videojuegos</string>

    <string name="hint_nombre_videojuego">Escribe el nombre del videojuego</string>

    <string-array name="lista_generos">
        <item>Acción</item>
        <item>Aventura</item>
        <item>Deportes</item>
        <item>RPG</item>
        <item>Estrategia</item>
        <item>Simulación</item>
        <item>Otros</item>
    </string-array>

    <string-array name="lista_estados">
        <item>Pendiente</item>
        <item>Jugado</item>
    </string-array>

    <string-array name="lista_plataformas">
        <item>PC</item>
        <item>PlayStation 5</item>
        <item>Xbox Series X/S</item>
        <item>Nintendo Switch</item>
    </string-array>
</resources>